# deejx

./: Cargo.toml  LICENSE  README.md  justfile
docs/: @.adoc  README.md  configuration-file.adoc  getting-started.adoc  master.if
docs/setup/: arduino.adoc  esp32.adoc
driver/: Cargo.toml  example.yml
driver/src/: config.rs  main.rs  packets.rs
driver/src/audio/: mod.rs  unix.rs
driver/src/midi/: mod.rs
firmware/: Cargo.toml  pins.md
src/: main.rs  packets.rs
