[package]
name = "deejx"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.7.1"
tokio = { version = "1.44.2", features = ["full"] }
pulsectl-rs = "0.3.2"
libpulse-binding = "2.30.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"