[package]
name = "deejx-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
xdg = "2.5.2"
anyhow = "1.0.98"

[target.'cfg(unix)'.dependencies]
pulsectl-rs = "0.3.2"
libpulse-binding = "2.30.1"

[target.'cfg(windows)'.dependencies]
