[package]
name = "deejx-driver"
version = "0.1.1"
edition = "2024"

[dependencies]
serialport = "4.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
crossbeam-channel = "0.5.15"
log = "0.4.27"
pretty_env_logger = "0.5.0"
anyhow = "1.0.98"
midir = "0.10.1"
xdg = "2.5.2"
notify = "8.0.0"

[target.'cfg(unix)'.dependencies]
pulsectl-rs = "0.3.2"
libpulse-binding = "2.30.1"

[target.'cfg(windows)'.dependencies]
